# mweralign

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Changelog  MANIFEST.in  Makefile  README.md  TODO.md  pyproject.toml  setup.py
.github/workflows/: build.yml
expt/results/: realign_profile.tsv  restoration_comparison_tidy.tsv  restoration_comparison_wide.tsv  restore_fixed.tsv  restore_legacy.tsv  restore_spm128k.tsv  restore_spm256k.tsv  restore_spm32k.tsv  restore_spm64k.tsv
expt/results/scores/cs-uk/: results.tsv
expt/results/scores/en-cs/: results.tsv
expt/results/scores/en-de/: results.tsv
expt/results/scores/en-es/: results.tsv
expt/results/scores/en-hi/: results.tsv
expt/results/scores/en-is/: results.tsv
expt/results/scores/en-ja/: results.tsv
expt/results/scores/en-ru/: results.tsv
expt/results/scores/en-uk/: results.tsv
expt/results/scores/en-zh/: results.tsv
expt/results/scores/ja-zh/: results.tsv
python/bindings/: bindings.cpp
python/mweralign/: __init__.py  models.py  mweralign.py  segmenter.py
python/tests/: test_alignment_trace.py  test_mweralign.py  test_regression.py  test_segmenter.py
python/tests/regression/basic/: expected.txt  hyp.txt
python/tests/regression/cj/: expected.txt  hyp.txt
python/tests/regression/cj_docids/: cmd  docids.txt  hyp.txt  ref.txt
python/tests/regression/cj_errors/: expected.txt  hyp.txt  ref.txt
python/tests/regression/cj_ja/: cmd  expected.txt  hyp.txt
python/tests/regression/cj_mixed/: hyp.txt  ref.txt
python/tests/regression/cj_underscore/: cmd  hyp.txt  ref.txt
python/tests/regression/docids/: cmd  docids.txt  expected.txt  hyp.txt  ref.txt
python/tests/regression/empty_ref/: cmd  expected.txt  hyp.txt  ref.txt
python/tests/regression/score/: cmd  expected.txt  hyp.txt  ref.txt
python/tests/regression/score_cj/: cmd  expected.txt  hyp.txt
python/tests/regression/score_mixed/: cmd  expected.txt  hyp.txt  ref.txt
python/tests/regression/whitespace_segment/: expected.txt  hyp.txt
python/tests/regression/wmt24_ende_merge_flores/: cmd
python/tests/regression/wmt24_ende_merge_none/: expected.txt
python/tests/regression/wmt24_ende_merge_spm/: cmd  docids.txt  hyp.txt  ref.txt  spm32k.model
python/tests/regression/wmt24_ende_score/: expected.txt  hyp.txt
python/tests/regression/wmt24_jazh_merge_cj/: docids.txt  expected.txt  hyp.txt
python/tests/regression/zh_spm/: cmd  expected.txt  hyp.txt  ref.txt
scripts/: build.sh  build_all.py  install.sh  linediff.py  make_wmt24_regression.py  spm-train.sh
scripts/experiments/: README.md  __init__.py  compare_restoration.py  data.py  diagnose_alignment.py  download_data.py  error_analysis.py  make_score_table.py  punct_heuristics.py  realign.py  restoration_comparison.ipynb  restoration_rate.py  run.py  score.py
src/: SimpleText2.hh  mwerAlign.cc  mwerAlign.hh
